www/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    font-family: 'Open Sans', sans-serif;
}

#download {
    font-size: 1rem;
    line-height: 1.8;
    padding: 0.5rem 1rem;
}

@layer base {
    :root {
        --background: 0 0% 100%;
        --foreground: 222.2 84% 4.9%;
        --card: 0 0% 100%;
        --card-foreground: 222.2 84% 4.9%;
        --popover: 0 0% 100%;
        --popover-foreground: 222.2 84% 4.9%;
        --primary: 221.2 83.2% 53.3%;
        --primary-foreground: 210 40% 98%;
        --secondary: 210 40% 96.1%;
        --secondary-foreground: 222.2 47.4% 11.2%;
        --muted: 210 40% 96.1%;
        --muted-foreground: 215.4 16.3% 44%;
        --accent: 210 40% 96.1%;
        --accent-foreground: 222.2 47.4% 11.2%;
        --destructive: 0 72% 51%;
        --destructive-foreground: 210 40% 98%;
        --border: 214.3 31.8% 91.4%;
        --input: 214.3 31.8% 91.4%;
        --ring: 221.2 83.2% 53.3%;
        --radius: 0.5rem;
    }
    
}

@layer base {
    * {
        @apply border-border;
    }

    body {
        @apply bg-background text-foreground font-body;
    }

    h1, h2, h3, h4, h5, h6 {
        @apply font-heading;
    }
    
    a:not(.button) {
        text-decoration: underline;
    }
}

